Fixed alignment issues

--- a/css/startups.css
+++ b/css/startups.css
@@ -8,8 +8,8 @@ body {
     background-color: white;
 }
 
-.red-text{
-    color:red;
+.red-text {
+    color: red;
     font-size: medium;
 }
 .main-head {
@@ -40,8 +40,7 @@ body {
     }
 }
 
-
-.container {
+.startup-container {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
